# doodle

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
examples/: CMakeLists.txt
examples/hello_world/: main.cpp
source/: CMakeLists.txt
source/3dgs/: CMakeLists.txt  README.md
source/3dgs/tutorial/: 3dgs_v0.cu  3dgs_v1.cu  3dgs_v2.cu  3dgs_v3.cu  3dgs_v4.cu  utils.cuh
source/cpp/: CMakeLists.txt
source/cpp/algorithm/: CMakeLists.txt  level1.cpp  level2.cpp  level3.cpp  level4.cpp  level5.cpp  level6.cpp  level7.cpp
source/cpp/container/: CMakeLists.txt  README.md  level1.cpp  level2.cpp  level3.cpp  level4.cpp  level5.cpp  level6.cpp  level7.cpp
source/cpp/multi_thread/: CMakeLists.txt  level1.cpp  level2.cpp  level3.cpp  level4.cpp  level5.cpp  level6.cpp
source/cpp/multi_thread/notes/: codility.md  knowledge.md
source/cpp/multi_thread/tutorial/: level1_thread_basics.cpp  level2_race_condition.cpp  level3_mutex_basics.cpp  level4_raii_locks.cpp  level5_condition_variable.cpp  level6_producer_consumer.cpp  level7_atomic.cpp  level8_thread_pool.cpp
source/cuda/: CMakeLists.txt
source/cuda/doc/: 01_thread_model.md  02_memory_model.md  03_scheduling_sm.md  04_stream_event.md  05_primitives_optimization.md  README.md  cuda.txt
source/cuda/gemm/: CMakeLists.txt
source/cuda/gemm/tutorial/: gemm_v0.cu  gemm_v1.cu  gemm_v2.cu  gemm_v3.cu  gemm_v4.cu  gemm_v5.cu  utils.cuh
source/cuda/optimization/: 01_memory_optimization.md  02_compute_optimization.md  03_occupancy_latency.md  04_algorithmic_optimization.md  05_concurrency.md  README.md
source/cuda/reduce/: CMakeLists.txt  readme.md
source/cuda/reduce/tutorial/: reduce_v0.cu  reduce_v1.cu  reduce_v2.cu  reduce_v3.cu  reduce_v4.cu  reduce_v5.cu  reduce_v6.cu  reduce_v7.cu  utils.cuh
source/doodle/: CMakeLists.txt  frame_graph.cpp  frame_graph.h  graph_node.h  lib.cpp  lib.h  pass.h  pass_node.cpp  pass_node.h  resource.h  resource_manager.h  resource_node.h
source/doodle/core/: log_system.cpp  log_system.h
source/doodle/core/base/: macro.h
source/doodle/core/log/: log_system.cpp  log_system.h
source/doodle/scene/: component.h  entity.cpp  entity.h  scene.h
source/example/: CMakeLists.txt  main.cpp
source/opengl/: rendering_optimization.md
